# src/main/java/wallet/model/Category.java
@@ -1,0 +1,6 @@
+package wallet.model;
+
+public enum Category {
+    WAGER,
+    PAYOUT
+}
