# src/main/java/wallet/model/Transaction.java
@@ -7,4 +7,5 @@ import java.math.BigDecimal;
 @Data
 public class Transaction {
     private BigDecimal amount;
+    private Category category;
 }
